- Aded bulk "Resolve in Next Release" to stream actions.
- Various visual improvements to notifications, including the addition of
  transactions.
- Plugins can now add tasks that run in sentry as celery workers.
- Added the ability to verify TLS connections when fetching artifacts.
- Added data migration to merge environments across an organization

API Changes
~~~~~~~~~~~

- Added OrganizationReleasesEndpoint.
- Added context type ``app`` for cocoa events.
- Added ``assignedTo`` param to ``/projects/{org}/{project}/issues/``.
- Split out filtered stats onto Inbound Data Filters page
- Added OrganizationReleasesEndpoint
- Added OrganizationReleaseFileEndpoint

Schema Changes
~~~~~~~~~~~~~~

- Added unique index on ``Release(organization_id, version)``
- Removed unique index on ``Release(project_id, version)``
- Added ``GroupCommitResolution`` model.
- Added ``Environment.organization_id`` column.
- Added ``EnvironmentProject`` model.
- Added ``Project.flags`` column.
- Added not null constraint to ``Environment.organization_id`` column.
- Removed not null constraint on ``Environment.project_id`` and ``ReleaseEnvironment.project_id`` columns

Version 8.13
------------

- Added individual filters for legacy browsers to improve customization of error filtering based on browser versions
- Support for setting a custom security header for javascript fetching.
- start using ReleaseProject and Release.organization instead of Release.project
- Project quotas are no longer available, and must now be configured via the organizational rate limits.
- Quotas implementation now requires a tuple of maximum rate and interval window.
- Added security emails for adding and removing MFA and password changes.
- Added the ability to download an apple compatible crash report for cocoa events.
- Add memory and storage information for apple devices
- The legacy API keys feature is now disabled by default.
- Show Images Loaded section for cocoa events with version number.