@@ -18,6 +18,7 @@ Version 8.14 (Unreleased)
 - Plugins can now add tasks that run in sentry as celery workers.
 - Added the ability to verify TLS connections when fetching artifacts.
 - Added data migration to merge environments across an organization
+- Added ``timesSeen`` keyword to issue search.
 
 API Changes
 ~~~~~~~~~~~
